@@ -16,9 +16,8 @@
 package ghidra.plugins.fsbrowser;
 
 import java.io.IOException;
-import java.util.*;
-
-import javax.swing.Icon;
+import java.util.ArrayList;
+import java.util.List;
 
 import docking.widgets.tree.GTreeNode;
 import ghidra.formats.gfilesystem.*;
@@ -31,46 +30,88 @@ import ghidra.util.task.TaskMonitor;
  * <p>
  * The {@link FileSystemRef} is released when this node is {@link #dispose()}d.
  * <p>
- * Visible to just this package.
+ * Since GTreeNodes are cloned during GTree filtering, and this class has a reference to an external
+ * resource that needs managing, this class needs to keeps track of the original modelNode
+ * and does all state modification using the modelNode's context.
  */
 public class FSBRootNode extends FSBNode {
 
 	private FileSystemRef fsRef;
 	private FSBFileNode prevNode;
 	private List<FSBRootNode> subRootNodes = new ArrayList<>();
+	private FSBRootNode modelNode;
 
 	FSBRootNode(FileSystemRef fsRef) {
-		this.fsRef = fsRef;
+		this(fsRef, null);
 	}
 
 	FSBRootNode(FileSystemRef fsRef, FSBFileNode prevNode) {
 		this.fsRef = fsRef;
 		this.prevNode = prevNode;
-	}
-
-	public FileSystemRef getFSRef() {
-		return fsRef;
-	}
-
-	public void releaseFSRefs() {
-		for (FSBRootNode subFSBRootNode : subRootNodes) {
-			subFSBRootNode.releaseFSRefs();
-		}
-		subRootNodes.clear();
-		if (fsRef != null) {
-			fsRef.close();
-			fsRef = null;
-		}
+		this.modelNode = this;
 	}
 
 	@Override
-	public Icon getIcon(boolean expanded) {
-		return null;
+	public GTreeNode clone() throws CloneNotSupportedException {
+		FSBRootNode clone = (FSBRootNode) super.clone();
+		clone.fsRef = null; // stomp on the clone's fsRef to force it to use modelNode's fsRef
+		return clone;
+	}
+
+	@Override
+	public void dispose() {
+		releaseFSRefsIfModelNode();
+		super.dispose();
+	}
+
+	void swapBackPrevModelNodeAndDispose() {
+		if (this != modelNode) {
+			modelNode.swapBackPrevModelNodeAndDispose();
+			return;
+		}
+		int indexInParent = getIndexInParent();
+		GTreeNode parent = getParent();
+		parent.removeNode(this);
+		parent.addNode(indexInParent, prevNode);
+		dispose(); // releases the fsRef
+	}
+
+	public FileSystemRef getFSRef() {
+		return modelNode.fsRef;
+	}
+
+	private void releaseFSRefsIfModelNode() {
+		if (this != modelNode) {
+			return;
+		}
+		for (FSBRootNode subFSBRootNode : subRootNodes) {
+			subFSBRootNode.releaseFSRefsIfModelNode();
+		}
+		subRootNodes.clear();
+
+		FileSystemService.getInstance().releaseFileSystemImmediate(fsRef);
+		fsRef = null;
+	}
+
+	@Override
+	public void updateFileAttributes(TaskMonitor monitor) throws CancelledException {
+		if (this != modelNode) {
+			modelNode.updateFileAttributes(monitor);
+			return;
+		}
+		for (GTreeNode node : getChildren()) {
+			monitor.checkCanceled();
+			if (node instanceof FSBFileNode) {
+				((FSBFileNode) node).updateFileAttributes(monitor);
+			}
+		}
 	}
 
 	@Override
 	public String getName() {
-		return fsRef != null && !fsRef.isClosed() ? fsRef.getFilesystem().getName() : " Missing ";
+		return modelNode.fsRef != null && !modelNode.fsRef.isClosed()
+				? modelNode.fsRef.getFilesystem().getName()
+				: " Missing ";
 	}
 
 	@Override
@@ -84,36 +125,22 @@ public class FSBRootNode extends FSBNode {
 	}
 
 	@Override
-	public void dispose() {
-		releaseFSRefs();
-		super.dispose();
-	}
-
-	@Override
 	public List<GTreeNode> generateChildren(TaskMonitor monitor) throws CancelledException {
 		if (fsRef != null) {
-
 			try {
-				return FSBNode.getNodesFromFileList(fsRef.getFilesystem().getListing(null));
+				return FSBNode.createNodesFromFileList(fsRef.getFilesystem().getListing(null),
+					monitor);
 			}
 			catch (IOException e) {
 				FSUtilities.displayException(this, null, "Error Opening File System",
 					"Problem generating children at root of file system", e);
 			}
 		}
-		return Collections.emptyList();
+		return List.of();
 	}
 
 	@Override
 	public FSRL getFSRL() {
-		return fsRef.getFilesystem().getFSRL();
-	}
-
-	public FSBFileNode getPrevNode() {
-		return prevNode;
-	}
-
-	public List<FSBRootNode> getSubRootNodes() {
-		return subRootNodes;
+		return modelNode.fsRef.getFilesystem().getFSRL();
 	}
 }
